--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "companybot",
   "version": "1.0.0",
-  "description": "This Bot demonstrates how to implement simple multi-turns using waterfalls. By",
-  "main": "multi-turn we mean supporting scenarios where a user asks a question about ",
+  "description": "This Bot demonstrates how to implement simple multi-turns using waterfalls.",
+  "main": "./lib/botbuilder.js",
+  "typings": "./lib/botbuilder.d.ts",
   "scripts": {
-    "test": "sample shows a simple way to use session.dialogState to do just that."
+    "test": "mocha tests/*.js"
   },
   "repository": {
     "type": "git",
@@ -23,5 +24,15 @@
   "bugs": {
     "url": "https://github.com/JohnAntonusMaximus/MachineLearningChatBot/issues"
   },
-  "homepage": "https://github.com/JohnAntonusMaximus/MachineLearningChatBot#readme"
+  "homepage": "https://github.com/JohnAntonusMaximus/MachineLearningChatBot#readme",
+  "dependencies": {
+    "chrono-node": "^1.1.3",
+    "node-uuid": "^1.4.7",
+    "pug": "^2.0.0-alpha8",
+    "request": "^2.69.0",
+    "sprintf-js": "^1.0.3"
+  },
+  "devDependencies": {
+    "mocha": "^2.4.5"
+  }
 }
